# Tubes1_IF3270_ML_FFNN

./: README.md  notebook.ipynb  pyproject.toml
src/: main.py  notebook.ipynb
src/core/: activations.py  autodiff.py  layers.py  loss_functions.py  neural_network.py  normalization.py  weight_initializers.py
src/models/train/: metrics.py  trainer.py
